[package]
name = "brute_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
secp256k1 = { version = "0.28", features = ["rand-std", "global-context"] }
bitcoin = { version = "0.31", features = ["std"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
num_cpus = "1.16.0"




